# Todo

./: Cargo.toml  README.md  err  list.todo  testing_long.todo
src/: cli.rs  init_communism.rs  main.rs  select_helper.rs  todo_list.rs  util.rs
src/window/: key_event.rs  mod.rs  mouse_event.rs  window_view.rs
src/window/window_state/: helper.rs  mod.rs
