[package]
name = "todo"
version = "0.1.0"
authors = ["Braedon Wooding <braedonww@gmail.com>"]

[dependencies]
clap = "2.32.0"
termion = "*"
serde = { version = "1.0.71", features = ["rc"] }
serde_derive = "1.0.71"
toml = "0.4.6"
dialoguer = "0.1.0"
indoc = "0.2"
ctrlc = { version = "3.0", features = ["termination"] }
glob = "0.2"
error-chain = "0.12.0"
